# STARCoach

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  database.py  main.py  models.py  pyproject.toml  seed_questions.py
backend/routers/: analysis.py  attempts.py  dashboard.py  questions.py  recordings.py
backend/services/: coach.py  llm_analytics.py  progress.py  speech_analytics.py  transcription.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AnalyticsCard.jsx  AttemptList.jsx  CoachAvatar.jsx  Dashboard.jsx  FeedbackPanel.jsx  ProgressChart.jsx  QuestionCard.jsx  Timer.jsx  TranscriptView.jsx  VideoRecorder.jsx  ZoomLayout.jsx
frontend/src/hooks/: useMediaRecorder.js  useTimer.js
frontend/src/pages/: Home.jsx  Interview.jsx  Review.jsx
